添加直播列表类，添加点播视频列表类，更改点播跳转到dianboList,点播列表页搭建完成

--- a/QiHuangDJ/VIewController/Classify/ClassifyViewController.xib
+++ b/QiHuangDJ/VIewController/Classify/ClassifyViewController.xib
@@ -12,14 +12,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" userLabel="superView">
-            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+            <rect key="frame" x="0.0" y="64" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgi-RY-X8k" userLabel="直播view">
-                    <rect key="frame" x="0.0" y="38" width="320" height="151"/>
+                    <rect key="frame" x="0.0" y="38" width="320" height="171"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMk-6W-zo2">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="151"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="171"/>
                             <state key="normal" backgroundImage="huanchong_shouye.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -28,11 +28,11 @@
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dota_tiao1.png" translatesAutoresizingMaskIntoConstraints="NO" id="hoH-00-aPX" userLabel="直播Img">
-                            <rect key="frame" x="0.0" y="121" width="320" height="30"/>
+                            <rect key="frame" x="0.0" y="121" width="320" height="50"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="直播" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sK-3q-7Lj">
-                            <rect key="frame" x="53" y="121" width="259" height="30"/>
+                            <rect key="frame" x="53" y="141" width="259" height="30"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -57,10 +57,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ey-e0-aPe" userLabel="点播view">
-                    <rect key="frame" x="0.0" y="195" width="320" height="152"/>
+                    <rect key="frame" x="0.0" y="215" width="320" height="170"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCY-eF-gp4">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="152"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
                             <state key="normal" backgroundImage="huanchong_shouye.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -69,14 +69,14 @@
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dota_tiao2.png" translatesAutoresizingMaskIntoConstraints="NO" id="fdY-PA-9Vx">
-                            <rect key="frame" x="0.0" y="122" width="320" height="30"/>
+                            <rect key="frame" x="0.0" y="140" width="320" height="30"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="i3N-PZ-S9P"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点播" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDH-OK-6WS">
-                            <rect key="frame" x="45" y="127" width="267" height="20"/>
+                            <rect key="frame" x="45" y="145" width="267" height="20"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -99,10 +99,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SlT-f8-ghG" userLabel="资讯view">
-                    <rect key="frame" x="0.0" y="353" width="320" height="151"/>
+                    <rect key="frame" x="0.0" y="391" width="320" height="171"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKP-49-Ek8">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="151"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="171"/>
                             <state key="normal" backgroundImage="huanchong_shouye.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -111,14 +111,14 @@
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dota_tiao3.png" translatesAutoresizingMaskIntoConstraints="NO" id="c64-re-rZQ">
-                            <rect key="frame" x="0.0" y="120" width="320" height="31"/>
+                            <rect key="frame" x="0.0" y="140" width="320" height="31"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="31" id="IxR-ff-qdc"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="资讯" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W3Z-B1-xvf">
-                            <rect key="frame" x="4" y="125" width="312" height="21"/>
+                            <rect key="frame" x="4" y="145" width="312" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -139,6 +139,10 @@
                         <constraint firstItem="hKP-49-Ek8" firstAttribute="leading" secondItem="SlT-f8-ghG" secondAttribute="leading" id="qW3-pd-W1u"/>
                     </constraints>
                 </view>
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aam-uJ-HdW">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -148,14 +152,18 @@
                 <constraint firstItem="SlT-f8-ghG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="70N-g1-CfP"/>
                 <constraint firstItem="8ey-e0-aPe" firstAttribute="top" secondItem="Kgi-RY-X8k" secondAttribute="bottom" constant="6" id="Ghl-iL-6C6"/>
                 <constraint firstAttribute="trailing" secondItem="8ey-e0-aPe" secondAttribute="trailing" id="PEx-j1-ujM"/>
-                <constraint firstAttribute="bottom" secondItem="SlT-f8-ghG" secondAttribute="bottom" id="TSR-7T-Rxn"/>
+                <constraint firstItem="aam-uJ-HdW" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="POv-4D-Nx4"/>
+                <constraint firstItem="aam-uJ-HdW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="PmT-9s-Nou"/>
+                <constraint firstAttribute="bottom" secondItem="SlT-f8-ghG" secondAttribute="bottom" constant="6" id="TSR-7T-Rxn"/>
+                <constraint firstItem="Kgi-RY-X8k" firstAttribute="top" secondItem="aam-uJ-HdW" secondAttribute="bottom" constant="-6" id="aFl-g0-WOa"/>
                 <constraint firstItem="Kgi-RY-X8k" firstAttribute="height" secondItem="8ey-e0-aPe" secondAttribute="height" id="cE2-Xf-LTO"/>
                 <constraint firstItem="8ey-e0-aPe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mj2-Ni-LkA"/>
+                <constraint firstAttribute="trailing" secondItem="aam-uJ-HdW" secondAttribute="trailing" id="q2o-pq-wIZ"/>
                 <constraint firstItem="Kgi-RY-X8k" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vfz-cF-oFj"/>
                 <constraint firstAttribute="trailing" secondItem="SlT-f8-ghG" secondAttribute="trailing" id="wan-rH-eXs"/>
                 <constraint firstItem="Kgi-RY-X8k" firstAttribute="height" secondItem="SlT-f8-ghG" secondAttribute="height" id="y0E-1s-Nlk"/>
             </constraints>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+            <nil key="simulatedTopBarMetrics"/>
             <point key="canvasLocation" x="542" y="271"/>
         </view>
     </objects>
