--- a/QiHuangDJ/VIewController/LoginAndRegister/LoginViewController.xib
+++ b/QiHuangDJ/VIewController/LoginAndRegister/LoginViewController.xib
@@ -259,7 +259,7 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="pressRegisterButton:" destination="-1" eventType="touchUpInside" id="cpA-pR-T0e"/>
+                        <action selector="pressRegisterButton:" destination="-1" eventType="touchUpInside" id="4br-I3-py6"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKF-MT-P6Q">
