--- a/QiHuangDJ/VIewController/PersonCenter/KHLPICRecommendedCell.xib
+++ b/QiHuangDJ/VIewController/PersonCenter/KHLPICRecommendedCell.xib
@@ -3,18 +3,142 @@
     <dependencies>
         <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KHLPICRecommendedCell" id="KGk-i7-Jjw" customClass="KHLPICRecommendedCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="KHLPICRecommendedCell" id="KGk-i7-Jjw" customClass="KHLPICRecommendedCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yef-c5-479" userLabel="Cell Holder View">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fig-tL-ECF" userLabel="Left Holder View">
+                                <rect key="frame" x="0.0" y="0.0" width="158" height="100"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fxG-FH-w6n" userLabel="Left Image View">
+                                        <rect key="frame" x="0.0" y="0.0" width="158" height="100"/>
+                                    </imageView>
+                                    <view alpha="0.69999999999999973" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toj-mX-fE0" userLabel="Left Translucent White Backdrop View">
+                                        <rect key="frame" x="0.0" y="70" width="158" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="toj-mX-fE0" secondAttribute="height" multiplier="79:15" id="iOO-T0-aIK"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="离绪悄微弦，永夜清霜透幕帘。明日回头江树远，怀贤。目断晴空雁字连。" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4on-SN-QKt" userLabel="Left Label">
+                                        <rect key="frame" x="8" y="70" width="142" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="EUf-jH-hJO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="EUf-jH-hJO"/>
+                                            </mask>
+                                        </variation>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="fxG-FH-w6n" secondAttribute="bottom" id="3dH-sl-Eic"/>
+                                    <constraint firstItem="4on-SN-QKt" firstAttribute="leading" secondItem="fig-tL-ECF" secondAttribute="leading" constant="8" id="6MY-m3-FmC"/>
+                                    <constraint firstItem="4on-SN-QKt" firstAttribute="height" secondItem="toj-mX-fE0" secondAttribute="height" id="AqR-yf-EhH"/>
+                                    <constraint firstAttribute="trailing" secondItem="fxG-FH-w6n" secondAttribute="trailing" id="Bkn-aV-A75"/>
+                                    <constraint firstItem="fxG-FH-w6n" firstAttribute="top" secondItem="fig-tL-ECF" secondAttribute="top" id="DJm-AH-M8Y"/>
+                                    <constraint firstAttribute="trailing" secondItem="toj-mX-fE0" secondAttribute="trailing" id="NEo-oR-hgg"/>
+                                    <constraint firstAttribute="bottom" secondItem="toj-mX-fE0" secondAttribute="bottom" id="byl-Sr-9II"/>
+                                    <constraint firstItem="toj-mX-fE0" firstAttribute="leading" secondItem="fig-tL-ECF" secondAttribute="leading" id="e8x-Es-tQB"/>
+                                    <constraint firstAttribute="bottom" secondItem="4on-SN-QKt" secondAttribute="bottom" id="eQi-dc-GRr"/>
+                                    <constraint firstAttribute="width" secondItem="fig-tL-ECF" secondAttribute="height" multiplier="79:50" id="hA2-Z2-MU9"/>
+                                    <constraint firstItem="fxG-FH-w6n" firstAttribute="leading" secondItem="fig-tL-ECF" secondAttribute="leading" id="oBh-6R-WhS"/>
+                                    <constraint firstAttribute="trailing" secondItem="4on-SN-QKt" secondAttribute="trailing" constant="8" id="qIi-1b-EAO"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="hA2-Z2-MU9"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8qD-iM-0fw" userLabel="Right Holder View">
+                                <rect key="frame" x="162" y="0.0" width="158" height="100"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4eu-8p-S3M" userLabel="Right Image View">
+                                        <rect key="frame" x="0.0" y="0.0" width="158" height="100"/>
+                                    </imageView>
+                                    <view alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JtS-8c-1jo" userLabel="Right Translucent White Backdrop View">
+                                        <rect key="frame" x="0.0" y="70" width="158" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="JtS-8c-1jo" secondAttribute="height" multiplier="79:15" id="Ekr-jM-UsE"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="离绪悄微弦，永夜清霜透幕帘。明日回头江树远，怀贤。目断晴空雁字连。" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zkf-Q2-O5E" userLabel="Right Label">
+                                        <rect key="frame" x="8" y="70" width="142" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="zkf-Q2-O5E" secondAttribute="bottom" id="9Km-nE-Bk3"/>
+                                    <constraint firstAttribute="bottom" secondItem="4eu-8p-S3M" secondAttribute="bottom" id="EI3-pg-lIT"/>
+                                    <constraint firstAttribute="trailing" secondItem="zkf-Q2-O5E" secondAttribute="trailing" constant="8" id="H07-1h-sjy"/>
+                                    <constraint firstItem="4eu-8p-S3M" firstAttribute="leading" secondItem="8qD-iM-0fw" secondAttribute="leading" id="KSM-Zc-XWy"/>
+                                    <constraint firstItem="JtS-8c-1jo" firstAttribute="leading" secondItem="8qD-iM-0fw" secondAttribute="leading" id="MgP-tK-dXS"/>
+                                    <constraint firstItem="JtS-8c-1jo" firstAttribute="height" secondItem="zkf-Q2-O5E" secondAttribute="height" id="Ntx-Qs-5cA"/>
+                                    <constraint firstAttribute="bottom" secondItem="JtS-8c-1jo" secondAttribute="bottom" id="O49-md-d31"/>
+                                    <constraint firstAttribute="trailing" secondItem="JtS-8c-1jo" secondAttribute="trailing" id="Plz-VN-agc"/>
+                                    <constraint firstAttribute="trailing" secondItem="4eu-8p-S3M" secondAttribute="trailing" id="QPa-qj-vQH"/>
+                                    <constraint firstItem="zkf-Q2-O5E" firstAttribute="leading" secondItem="8qD-iM-0fw" secondAttribute="leading" constant="8" id="Xjy-Mf-3z3"/>
+                                    <constraint firstAttribute="width" secondItem="8qD-iM-0fw" secondAttribute="height" multiplier="79:50" id="eNN-vb-PoA"/>
+                                    <constraint firstItem="4eu-8p-S3M" firstAttribute="top" secondItem="8qD-iM-0fw" secondAttribute="top" id="tRR-mB-yuw"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="eNN-vb-PoA"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="8qD-iM-0fw" firstAttribute="leading" secondItem="fig-tL-ECF" secondAttribute="trailing" constant="4" id="1le-2x-XDS"/>
+                            <constraint firstAttribute="trailing" secondItem="8qD-iM-0fw" secondAttribute="trailing" id="49X-J6-1SS"/>
+                            <constraint firstAttribute="bottom" secondItem="8qD-iM-0fw" secondAttribute="bottom" id="D65-Ej-qCj"/>
+                            <constraint firstItem="8qD-iM-0fw" firstAttribute="top" secondItem="yef-c5-479" secondAttribute="top" id="NGx-YC-H4r"/>
+                            <constraint firstItem="fig-tL-ECF" firstAttribute="width" secondItem="8qD-iM-0fw" secondAttribute="width" id="Ntr-T7-C3A"/>
+                            <constraint firstAttribute="bottom" secondItem="fig-tL-ECF" secondAttribute="bottom" id="e0N-sB-2Sk"/>
+                            <constraint firstItem="fig-tL-ECF" firstAttribute="top" secondItem="yef-c5-479" secondAttribute="top" id="gTO-Qe-X13"/>
+                            <constraint firstItem="fig-tL-ECF" firstAttribute="leading" secondItem="yef-c5-479" secondAttribute="leading" id="sdl-aw-gtE"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="yef-c5-479" secondAttribute="bottom" constant="-3" id="1dh-U1-K8o"/>
+                    <constraint firstItem="yef-c5-479" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="ICj-Jn-6nF"/>
+                    <constraint firstItem="yef-c5-479" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="ZRZ-P4-8fx"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="yef-c5-479" secondAttribute="trailing" constant="-8" id="pjj-ho-rGb"/>
+                </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.95022624430000002" green="0.25790188419999999" blue="0.15463173020000001" alpha="1" colorSpace="calibratedRGB"/>
+            <connections>
+                <outlet property="leftBackdropView" destination="toj-mX-fE0" id="q9n-Zp-USv"/>
+                <outlet property="leftImageView" destination="fxG-FH-w6n" id="2gO-Wo-fAw"/>
+                <outlet property="leftLabel" destination="4on-SN-QKt" id="G4j-XM-Nk9"/>
+                <outlet property="rightBackdropView" destination="JtS-8c-1jo" id="9Op-Fy-Ucw"/>
+                <outlet property="rightImageView" destination="4eu-8p-S3M" id="SXh-vC-AUt"/>
+                <outlet property="rightLabel" destination="zkf-Q2-O5E" id="Qe0-dd-D8e"/>
+            </connections>
+            <point key="canvasLocation" x="245" y="260.5"/>
         </tableViewCell>
     </objects>
 </document>
